--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-    <title>Title</title>
+    <title>Storybook</title>
     <link rel="stylesheet" type="text/css" href="static/styles/main.css">
 </head>
 <body>
+    <div class="container">
+
+
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/EventEmitter/5.2.3/EventEmitter.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
+
     <script src="dist/vendor.bundle.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
