--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
     <title>Storybook</title>
     <link rel="stylesheet" type="text/css" href="static/styles/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+    <script>
+        WebFont.load({
+            google: {
+                families: ['Chelsea Market', 'Varela Round']
+            }
+        });
+
+    </script>
 </head>
 <body>
     <div class="container">
 
 
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/EventEmitter/5.2.3/EventEmitter.min.js"></script>
+   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/EventEmitter/5.2.3/EventEmitter.min.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
 
     <script src="dist/vendor.bundle.js"></script>
