--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
 
     <script src="dist/vendor.bundle.js"></script>
+    <script src="lib/particle-storm.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
 </html>
